# sm-vita

./: BUILDING.md  README.md
src/: main.c  opengl.c  sm_cpu_infra.c  util.h
src/platform/vita/: .gitignore  CMakeLists.txt  README.md  sm.ini
src/platform/vita/src/: vita_impl.c  vita_impl.h
src/snes/: ppu.c
